fixed transition-related bug on last commit on mobile sizes

--- a/less/uw.thinstrip.less
+++ b/less/uw.thinstrip.less
@@ -245,6 +245,12 @@
 			top: 0;
 			left: 0;
 			background-size: 470px;
+      .transition(all 0s);
+      &:hover,
+      &:focus,
+      {
+        background-size: 470px;
+      }
 		}
 		.uw-wordmark {
 			width: 155px;
